--- a/AMP.html
+++ b/AMP.html
@@ -20,6 +20,7 @@
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
   </head>
   <body>
+	  <header>
     			<h1> World's Greatest Drag Race on Forza 6 </h1>
 			<a href="https://www.youtube.com/watch?v=GtU3vLAxUBQ">Watch Now!</a>
 			<h2 style="color:red;">Car 1: Bugatti Veyron Super Sport</h2>
@@ -88,5 +89,5 @@
 		<footer>
 			<h4>&copy; 2016 Qiang Jiayuan @ qiang.jiayuan@dhs.sg</h4>
 		</footer>
-  </body>
+	</body>
 </html>
