--- a/AMP.html
+++ b/AMP.html
@@ -23,12 +23,12 @@
   	<header>
     		<h1> World's Greatest Drag Race on Forza 6 </h1>
 		<a href="https://www.youtube.com/watch?v=GtU3vLAxUBQ">Watch Now!</a>
-		<h2 style="color:red;">Car 1: Bugatti Veyron Super Sport</h2>
-		<h2 style="color:yellow;">Car 2: Ferrari LaFerrari</h2>
+		<h2 style amp-custom="color:red;">Car 1: Bugatti Veyron Super Sport</h2>
+		<h2 style amp-custom="color:yellow;">Car 2: Ferrari LaFerrari</h2>
 		<h2 style="color:blue;">Car 3: Koenigsegg One:1</h2>
 		<h2 style="color:black;">Car 4: McLaren P1</h2>
 		<h2 style="color:silver;">Car 5: Hennessey Venom GT</h2>
-		<img src="http://i.giphy.com/keW1tQwx60KgE.gif">
+		<amp-img src="http://i.giphy.com/keW1tQwx60KgE.gif"></amp-img>
 	</header>
 	<main>
 		<article>
