--- a/AMP.html
+++ b/AMP.html
@@ -28,7 +28,10 @@
 		<h2>Car 3: Koenigsegg One:1</h2>
 		<h2>Car 4: McLaren P1</h2>
 		<h2>Car 5: Hennessey Venom GT</h2>
-		<amp-img src="http://i.giphy.com/keW1tQwx60KgE.gif"></amp-img>
+		<amp-img src="http://i.giphy.com/keW1tQwx60KgE.gif" width="1080"
+      height="610"
+      layout="responsive"
+      alt="an image"></amp-img>
 	</header>
 	<main>
 		<article>
